refactor(ga): planeja em PlanningItem, nao em disciplina de concurso
O nucleo do AG passa a falar em item de planejamento — o topico do SINAPSE,
identificado por UUID — em vez de disciplina de edital. O cromossomo ja era
agnostico quanto ao que um gene significa (um int[] alinhado a uma ordem
canonica); o que nao era agnostico eram os nomes.

Nao e uma generalizacao. Nao ha interface, estrategia nem fabrica: este
otimizador existe para servir o SINAPSE, a linha de concurso nao continua, e um
nucleo parametrizado com dois adaptadores permanentes seria abstracao comprada
para um futuro descartado de forma explicita. O caminho de concurso segue de pe
por um unico mapeador de fronteira, domain/exam/SubjectPlanningItemMapper,
marcado no Javadoc como removido em EOA-4b — e alojado em domain.exam para que
um unico apagar de pacote leve o mapeador junto.

A traducao e identidade: difficultyBand == cognitiveLoad (1..5, sem reescala),
id == name == subject.name(), que e injetivo porque StudentProfileMapper ja
recusa um edital com duas disciplinas de mesmo nome.

SubjectIndex vira PlanningItemIndex; LearningModel passa a receber a banda
ordinal em vez de um Subject. Operadores geneticos, selecao e populacao nao
mudaram: CreepMutation, TransferMutation, TournamentSelection, Population e
Individual estao intactos, e de GeneticAlgorithm so mudou um comentario. Os dois
cruzamentos trocaram import, tipo de parametro e nome de metodo — nenhuma linha
de aritmetica.

Determinismo: EvolutionContext.normalize devolvia um HashMap, e EvolutionContext
.temper soma Math.pow(peso, 0.5) percorrendo esse mapa. Soma de ponto flutuante
nao e associativa, e a ordem de balde vinha do hashCode da chave — que mudou com
o tipo. Medido: com 24 itens, TODOS os pesos de retencao sairam 1 ulp deslocados,
e a fitness publicada com eles. O mapa passa a ser um LinkedHashMap, que custa o
mesmo e declara a ordem, tornando a soma independente do tipo da chave e tambem
do detalhe interno do HashMap que o contra